--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -109,16 +109,30 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Check if deployment is configured
+      id: check-deployment
+      run: |
+        if [ -z "${{ secrets.TARGET_HOST }}" ]; then
+          echo "deploy_enabled=false" >> $GITHUB_OUTPUT
+          echo "⚠️  No TARGET_HOST configured - skipping deployment"
+        else
+          echo "deploy_enabled=true" >> $GITHUB_OUTPUT
+          echo "✅ TARGET_HOST configured - proceeding with deployment"
+        fi
+      
     - name: Set up SSH
+      if: steps.check-deployment.outputs.deploy_enabled == 'true'
       uses: webfactory/ssh-agent@v0.8.0
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
         
     - name: Add known hosts
+      if: steps.check-deployment.outputs.deploy_enabled == 'true'
       run: |
         ssh-keyscan -H ${{ secrets.TARGET_HOST }} >> ~/.ssh/known_hosts
         
     - name: Deploy with Ansible
+      if: steps.check-deployment.outputs.deploy_enabled == 'true'
       run: |
         cd deploy
         ansible-playbook -i inventory.yml deploy.yml \
@@ -128,6 +142,63 @@ jobs:
           --extra-vars "ansible_ssh_private_key_file=~/.ssh/id_rsa"
           
     - name: Health check
+      if: steps.check-deployment.outputs.deploy_enabled == 'true'
       run: |
         sleep 30
-        curl -f http://${{ secrets.TARGET_HOST }}:8000/api/v1/health || exit 1 
+        curl -f http://${{ secrets.TARGET_HOST }}:8000/api/v1/health || exit 1
+        
+    - name: Deployment skipped
+      if: steps.check-deployment.outputs.deploy_enabled == 'false'
+      run: |
+        echo "🚀 Docker image built and pushed successfully!"
+        echo "📦 Image: ${{ env.IMAGE_NAME }}"
+        echo "🔗 View on Docker Hub: https://hub.docker.com/r/${{ env.IMAGE_NAME }}"
+        echo ""
+        echo "To enable deployment, add these secrets to your repository:"
+        echo "- TARGET_HOST: Your server hostname or IP"
+        echo "- SSH_PRIVATE_KEY: Your SSH private key"
+        echo ""
+        echo "Or deploy to Vercel:"
+        echo "- VERCEL_TOKEN: Your Vercel deployment token"
+        echo "- VERCEL_ORG_ID: Your Vercel organization ID"
+        echo "- VERCEL_PROJECT_ID: Your Vercel project ID"
+
+  deploy-vercel:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Check if Vercel deployment is configured
+      id: check-vercel
+      run: |
+        if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then
+          echo "vercel_enabled=false" >> $GITHUB_OUTPUT
+          echo "⚠️  No VERCEL_TOKEN configured - skipping Vercel deployment"
+        else
+          echo "vercel_enabled=true" >> $GITHUB_OUTPUT
+          echo "✅ VERCEL_TOKEN configured - proceeding with Vercel deployment"
+        fi
+      
+    - name: Deploy to Vercel
+      if: steps.check-vercel.outputs.vercel_enabled == 'true'
+      uses: amondnet/vercel-action@v25
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+        working-directory: ./
+        vercel-args: '--prod'
+        
+    - name: Vercel deployment skipped
+      if: steps.check-vercel.outputs.vercel_enabled == 'false'
+      run: |
+        echo "🚀 Vercel deployment skipped - no VERCEL_TOKEN configured"
+        echo ""
+        echo "To enable Vercel deployment:"
+        echo "1. Go to https://vercel.com/account/tokens"
+        echo "2. Create a new token"
+        echo "3. Add VERCEL_TOKEN, VERCEL_ORG_ID, and VERCEL_PROJECT_ID secrets"" 
