--- a/deploy/deploy.yml
+++ b/deploy/deploy.yml
@@ -1,15 +1,12 @@
 ---
-- name: Deploy FastAPI Application to Production
+- name: Deploy FastAPI Application to Production using Docker
   hosts: webservers
   become: yes
   vars:
     app_name: "hsbc-pipeline-demo"
-    app_user: "fastapi"
-    app_dir: "/opt/{{ app_name }}"
     app_port: 8000
-    nexus_url: "{{ nexus_url | default('your-nexus-registry.com') }}"
-    repository_name: "{{ repository_name | default('your-repository-name') }}"
-    build_number: "{{ build_number | default('latest') }}"
+    docker_image: "{{ docker_image | default('jinggegeha/one-pipeline-demo') }}"
+    docker_tag: "{{ build_number | default('latest') }}"
     deployment_time: "{{ deployment_time | default('unknown') }}"
 
   tasks:
@@ -21,78 +18,81 @@
     - name: Install required packages
       apt:
         name:
-          - python3
-          - python3-pip
-          - python3-venv
           - curl
           - nginx
-          - supervisor
+          - apt-transport-https
+          - ca-certificates
+          - gnupg
+          - lsb-release
         state: present
 
-    - name: Create application user
+    - name: Add Docker GPG key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker repository
+      apt_repository:
+        repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+        state: present
+
+    - name: Install Docker
+      apt:
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+        state: present
+
+    - name: Start and enable Docker service
+      systemd:
+        name: docker
+        state: started
+        enabled: yes
+
+    - name: Add user to docker group
       user:
-        name: "{{ app_user }}"
-        system: yes
-        shell: /bin/bash
-        home: "/home/{{ app_user }}"
-        create_home: yes
+        name: "{{ ansible_user }}"
+        groups: docker
+        append: yes
 
-    - name: Create application directory
-      file:
-        path: "{{ app_dir }}"
-        state: directory
-        owner: "{{ app_user }}"
-        group: "{{ app_user }}"
-        mode: '0755'
+    - name: Stop and remove existing container
+      docker_container:
+        name: "{{ app_name }}"
+        state: absent
+      ignore_errors: yes
 
-    - name: Create Python virtual environment
-      pip:
-        name: virtualenv
+    - name: Remove old Docker images
+      docker_image:
+        name: "{{ docker_image }}"
+        state: absent
+      ignore_errors: yes
+
+    - name: Pull Docker image from Docker Hub
+      docker_image:
+        name: "{{ docker_image }}:{{ docker_tag }}"
+        source: pull
+        force_source: yes
+
+    - name: Create Docker container
+      docker_container:
+        name: "{{ app_name }}"
+        image: "{{ docker_image }}:{{ docker_tag }}"
+        state: started
+        restart_policy: unless-stopped
+        ports:
+          - "{{ app_port }}:8000"
+        env:
+          ENVIRONMENT: "production"
+          DEPLOYMENT_TIME: "{{ deployment_time }}"
+          BUILD_NUMBER: "{{ docker_tag }}"
+        networks:
+          - name: "{{ app_name }}-network"
+
+    - name: Create Docker network
+      docker_network:
+        name: "{{ app_name }}-network"
         state: present
-      become_user: "{{ app_user }}"
-
-    - name: Create virtual environment
-      command: python3 -m venv {{ app_dir }}/venv
-      args:
-        creates: "{{ app_dir }}/venv/bin/activate"
-      become_user: "{{ app_user }}"
-
-    - name: Download application artifact from Nexus
-      get_url:
-        url: "http://{{ nexus_url }}/repository/{{ repository_name }}/fastapi-app-{{ build_number }}.tar.gz"
-        dest: "/tmp/fastapi-app-{{ build_number }}.tar.gz"
-        mode: '0644'
-        timeout: 300
-
-    - name: Extract application artifact
-      unarchive:
-        src: "/tmp/fastapi-app-{{ build_number }}.tar.gz"
-        dest: "{{ app_dir }}"
-        remote_src: yes
-        owner: "{{ app_user }}"
-        group: "{{ app_user }}"
-
-    - name: Install Python dependencies
-      pip:
-        requirements: "{{ app_dir }}/requirements.txt"
-        virtualenv: "{{ app_dir }}/venv"
-        state: present
-      become_user: "{{ app_user }}"
-
-    - name: Create environment file
-      template:
-        src: env.j2
-        dest: "{{ app_dir }}/.env"
-        owner: "{{ app_user }}"
-        group: "{{ app_user }}"
-        mode: '0644'
-
-    - name: Create systemd service file
-      template:
-        src: fastapi.service.j2
-        dest: /etc/systemd/system/{{ app_name }}.service
-        mode: '0644'
-      notify: reload systemd
 
     - name: Create Nginx configuration
       template:
@@ -114,13 +114,6 @@
         state: absent
       notify: reload nginx
 
-    - name: Start and enable FastAPI service
-      systemd:
-        name: "{{ app_name }}"
-        state: started
-        enabled: yes
-        daemon_reload: yes
-
     - name: Wait for application to start
       wait_for:
         port: "{{ app_port }}"
@@ -129,22 +122,19 @@
 
     - name: Health check
       uri:
-        url: "http://localhost:{{ app_port }}/api/v1/health"
+        url: "http://localhost:{{ app_port }}/health"
         method: GET
         status_code: 200
       retries: 3
       delay: 10
 
-    - name: Clean up old artifacts
-      file:
-        path: "/tmp/fastapi-app-*.tar.gz"
-        state: absent
+    - name: Clean up unused Docker images
+      docker_prune:
+        images: yes
+        images_filters:
+          dangling: false
 
   handlers:
-    - name: reload systemd
-      systemd:
-        daemon_reload: yes
-
     - name: reload nginx
       service:
         name: nginx
