--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -131,6 +131,15 @@ jobs:
       run: |
         ssh-keyscan -H ${{ secrets.TARGET_HOST }} >> ~/.ssh/known_hosts
         
+    - name: Test Ansible Connection
+      if: steps.check-deployment.outputs.deploy_enabled == 'true'
+      run: |
+        cd deploy
+        ansible all -i inventory.yml -m ping \
+          -e "target_host=${{ secrets.TARGET_HOST }}" \
+          -e "ssh_user=${{ secrets.SSH_USER }}" \
+          -e "ssh_private_key_file=~/.ssh/id_rsa"
+        
     - name: Deploy with Ansible
       if: steps.check-deployment.outputs.deploy_enabled == 'true'
       run: |
@@ -139,7 +148,9 @@ jobs:
           -e "docker_image=${{ env.IMAGE_NAME }}" \
           -e "build_number=${{ github.run_number }}" \
           -e "deployment_time=${{ env.DEPLOYMENT_TIME }}" \
-          --extra-vars "ansible_ssh_private_key_file=~/.ssh/id_rsa"
+          -e "target_host=${{ secrets.TARGET_HOST }}" \
+          -e "ssh_user=${{ secrets.SSH_USER }}" \
+          -e "ssh_private_key_file=~/.ssh/id_rsa"
           
     - name: Health check
       if: steps.check-deployment.outputs.deploy_enabled == 'true'
