--- a/deploy/deploy.yml
+++ b/deploy/deploy.yml
@@ -3,7 +3,7 @@
   hosts: webservers
   become: yes
   vars:
-    app_name: "hsbc-pipeline-demo"
+    app_name: "one-pipeline-demo"
     app_port: 8000
     docker_image: "{{ docker_image | default('jinggegeha/one-pipeline-demo') }}"
     docker_tag: "{{ build_number | default('latest') }}"
@@ -26,15 +26,26 @@
           - lsb-release
         state: present
 
+    - name: Check if Docker is installed
+      stat:
+        path: /usr/bin/docker
+      register: docker_binary
+
+    - name: Debug Docker check result
+      debug:
+        msg: "Docker binary exists: {{ docker_binary.stat.exists }}"
+
     - name: Add Docker GPG key
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
+      when: not docker_binary.stat.exists
 
     - name: Add Docker repository
       apt_repository:
         repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
+      when: not docker_binary.stat.exists
 
     - name: Install Docker
       apt:
@@ -43,12 +54,14 @@
           - docker-ce-cli
           - containerd.io
         state: present
+      when: not docker_binary.stat.exists
 
     - name: Start and enable Docker service
       systemd:
         name: docker
         state: started
         enabled: yes
+      when: not docker_binary.stat.exists
 
     - name: Add user to docker group
       user:
@@ -68,11 +81,22 @@
         state: absent
       ignore_errors: yes
 
+    - name: Test Docker Hub connectivity with busybox
+      docker_image:
+        name: "busybox:latest"
+        source: pull
+        force_source: yes
+
     - name: Pull Docker image from Docker Hub
       docker_image:
         name: "{{ docker_image }}:{{ docker_tag }}"
         source: pull
         force_source: yes
+
+    - name: Create Docker network
+      docker_network:
+        name: "{{ app_name }}-network"
+        state: present
 
     - name: Create Docker container
       docker_container:
@@ -88,11 +112,6 @@
           BUILD_NUMBER: "{{ docker_tag }}"
         networks:
           - name: "{{ app_name }}-network"
-
-    - name: Create Docker network
-      docker_network:
-        name: "{{ app_name }}-network"
-        state: present
 
     - name: Create Nginx configuration
       template:
